--- a/style.css
+++ b/style.css
@@ -42,3 +42,11 @@
 .input_button {
     padding: 10px;
 }
+
+#input_field_id {
+    width: 300px;
+    height: 15px;
+    border-radius: 18px; 
+    padding: 10px;
+    border-width: 1px;
+}
